Add interactionMode to tile event config

--- a/Assets/Resources/Configuration/game_configuration.json
+++ b/Assets/Resources/Configuration/game_configuration.json
@@ -44,335 +44,340 @@
   },
   "maps" : {
     "ch1_drace_keep" : {
-      "background" : {
-        "previewURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch1_drace_keep?alt=media&token=b8f69dec-6449-4f83-a842-1da2880dd28e"
-      },
       "backgroundPath" : "map_backgrounds/ch1_drace_keep",
-      "backgroundURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch1_drace_keep?alt=media&token=b8f69dec-6449-4f83-a842-1da2880dd28e",
+      "backgroundURL" : "https://firebasestorage.googleapis.com/v0/b/tpqedit-staging.appspot.com/o/map_backgrounds%2Fch1_drace_keep?alt=media&token=ecfba7b3-9200-4e03-a71c-168585257db9",
       "createdOn" : 1477769926708,
       "displayName" : "Chapter 1: Drace Keep",
       "height" : "26",
       "id" : "ch1_drace_keep",
       "obstructions" : {
-        "-KWszakIny1bcwyXC2UQ" : {
+        "-KXbJT36U8oHXH8yFxGe" : {
           "x" : 14,
           "y" : 23
         },
-        "-KWszavpQXBJ9rb9C_3X" : {
-          "x" : 13,
-          "y" : 22
-        },
-        "-KWszb88f-vkMV-1aRCB" : {
+        "-KXbJTC5C98bOrAYJlUF" : {
           "x" : 15,
           "y" : 23
         },
-        "-KWszbOU1UFY7J0A6ciS" : {
+        "-KXbJTOUUq-KIIF8js-r" : {
           "x" : 16,
           "y" : 23
         },
-        "-KWszbVWU5hY4adbpzvI" : {
+        "-KXbJTY8LcNcZsDOJ_ii" : {
           "x" : 17,
           "y" : 23
         },
-        "-KWszb_ykCJjUA03ysBc" : {
+        "-KXbJTgSeilr-VAuTkcl" : {
           "x" : 18,
           "y" : 23
         },
-        "-KWszbrl3NI1h2NR9ygX" : {
+        "-KXbJTqSsCSclIl9z4Wf" : {
           "x" : 19,
           "y" : 23
         },
-        "-KWszby5MS6yClKQNRNR" : {
+        "-KXbJU1XxkO_YCwyR3tU" : {
           "x" : 20,
           "y" : 22
         },
-        "-KWszc6lHv98pBZnF9Hc" : {
+        "-KXbJUBesxNaOpMNMYdd" : {
           "x" : 20,
           "y" : 21
         },
-        "-KWszcCn_n4zyk8V_X9i" : {
+        "-KXbJULt6OWcqJZAjSIg" : {
           "x" : 20,
           "y" : 20
         },
-        "-KWszcMEhIAhikkUNv3F" : {
+        "-KXbJUW3pn-tY1jKZ6i4" : {
           "x" : 20,
           "y" : 19
         },
-        "-KWszc_bzzVngG9ZRi2X" : {
-          "x" : 13,
-          "y" : 21
-        },
-        "-KWszcjHp6XrED0m1Zvk" : {
-          "x" : 13,
-          "y" : 20
-        },
-        "-KWszco2ozkmA7ELIqLF" : {
-          "x" : 13,
-          "y" : 19
-        },
-        "-KWszcuJRlT44K2GiBRP" : {
-          "x" : 13,
-          "y" : 18
-        },
-        "-KWszdPozc1Es_IJarCb" : {
-          "x" : 20,
-          "y" : 17
-        },
-        "-KWszdUKQywErdNjIXkG" : {
+        "-KXbJUeuv8vq4mLULM6U" : {
           "x" : 20,
           "y" : 18
         },
-        "-KWszdaHLdT0WzWBMZtt" : {
+        "-KXbJUoSujbr1UQIhKQQ" : {
           "x" : 20,
-          "y" : 16
-        },
-        "-KWszdg79S-5Pp6pkBrL" : {
-          "x" : 20,
-          "y" : 15
-        },
-        "-KWszeAkJgilLXhcVUa4" : {
-          "x" : 13,
           "y" : 17
         },
-        "-KWszeGEk5-VRvZgmrXB" : {
-          "x" : 13,
+        "-KXbJUz0hA0fY93WFtyz" : {
+          "x" : 20,
           "y" : 16
         },
-        "-KWszeLcBxdUAK3yIV-G" : {
-          "x" : 13,
+        "-KXbJV8ND3wH4vM85Wed" : {
+          "x" : 20,
           "y" : 15
         },
-        "-KWszeRg658qk88Les48" : {
-          "x" : 13,
+        "-KXbJVJdkveCVfTFlc8Y" : {
+          "x" : 20,
           "y" : 14
         },
-        "-KWszf039uPa6Xximg73" : {
-          "x" : 13,
+        "-KXbJVTQj2bCgLqFQjEk" : {
+          "x" : 20,
           "y" : 13
         },
-        "-KWszf5jSgcvZJ8MtM5o" : {
+        "-KXbJVbqYjtJl61OV98Y" : {
+          "x" : 21,
+          "y" : 13
+        },
+        "-KXbJVkv9mLh9EJTWK7Q" : {
+          "x" : 22,
+          "y" : 13
+        },
+        "-KXbJVuT0982PXu47cen" : {
+          "x" : 23,
+          "y" : 13
+        },
+        "-KXbJW2Dzsn7pcQ9CE0r" : {
+          "x" : 24,
+          "y" : 13
+        },
+        "-KXbJWCDjyZplfMDXt3T" : {
+          "x" : 25,
+          "y" : 13
+        },
+        "-KXbJWOasQON86MyI6WU" : {
+          "x" : 26,
+          "y" : 13
+        },
+        "-KXbJWXApVksnLCS5Vwz" : {
+          "x" : 27,
+          "y" : 13
+        },
+        "-KXbJWemtGG22kqm2KgU" : {
+          "x" : 28,
+          "y" : 13
+        },
+        "-KXbJWnrEIsBLI76YRzl" : {
+          "x" : 29,
+          "y" : 13
+        },
+        "-KXbJWxHiHwn3htkhdKj" : {
+          "x" : 30,
+          "y" : 13
+        },
+        "-KXbJXBL5PHd91QR8Zd7" : {
+          "x" : 31,
+          "y" : 13
+        },
+        "-KXbJXL0yRn8O8buuzwV" : {
+          "x" : 32,
+          "y" : 13
+        },
+        "-KXbJXTcDei7wVqT-oyA" : {
+          "x" : 33,
+          "y" : 13
+        },
+        "-KXbJXb3yjdKMXajAYGt" : {
+          "x" : 34,
+          "y" : 13
+        },
+        "-KXbJXk6_WuPCxcIfLiW" : {
+          "x" : 35,
+          "y" : 13
+        },
+        "-KXbJXtz48v_z2NO5gru" : {
+          "x" : 36,
+          "y" : 13
+        },
+        "-KXbJY36-p5dWYqhl_YJ" : {
+          "x" : 37,
+          "y" : 13
+        },
+        "-KXbJYCR2ZZsDemDIcec" : {
+          "x" : 38,
+          "y" : 13
+        },
+        "-KXbJYhdr_nmK-zUh0Wy" : {
+          "x" : 39,
+          "y" : 13
+        },
+        "-KXbJYqpZH5ZtJQC_0Nx" : {
+          "x" : 40,
+          "y" : 13
+        },
+        "-KXbJZ4RVTbGhAOulIcJ" : {
+          "x" : 41,
+          "y" : 13
+        },
+        "-KXbJZFvkNDA_teeWRZs" : {
+          "x" : 42,
+          "y" : 12
+        },
+        "-KXbJZPTs47VN-uNXGXV" : {
+          "x" : 42,
+          "y" : 11
+        },
+        "-KXbJZZVQO2M1U0AdXi3" : {
+          "x" : 42,
+          "y" : 10
+        },
+        "-KXbJZlgWiOtGUbYXSBT" : {
+          "x" : 42,
+          "y" : 9
+        },
+        "-KXbJZvLz3gXblztOgHn" : {
+          "x" : 41,
+          "y" : 8
+        },
+        "-KXbJ_41cF-zHJeawoYB" : {
+          "x" : 40,
+          "y" : 8
+        },
+        "-KXbJ_E1WoCzUXqO2ZlQ" : {
+          "x" : 39,
+          "y" : 8
+        },
+        "-KXbJ_NKlUh5s-f-rUv4" : {
+          "x" : 38,
+          "y" : 8
+        },
+        "-KXbJ_dnMmVh3zLTSsHb" : {
+          "x" : 37,
+          "y" : 8
+        },
+        "-KXbJ_nSYZ-jhv53e6n0" : {
+          "x" : 36,
+          "y" : 8
+        },
+        "-KXbJ_xEonyxGRDioI2K" : {
+          "x" : 35,
+          "y" : 8
+        },
+        "-KXbJa6MRGC0yFu5fO1h" : {
+          "x" : 34,
+          "y" : 8
+        },
+        "-KXbJaFKSMSGAD-4KaMz" : {
+          "x" : 33,
+          "y" : 8
+        },
+        "-KXbJaP5FiWLrEMqmYX4" : {
+          "x" : 32,
+          "y" : 8
+        },
+        "-KXbJaZSnXVDUaH27YdY" : {
+          "x" : 31,
+          "y" : 8
+        },
+        "-KXbJaiRYNO1louoaifA" : {
+          "x" : 30,
+          "y" : 8
+        },
+        "-KXbJarzfBl_rKNCKRxk" : {
+          "x" : 29,
+          "y" : 8
+        },
+        "-KXbJb16P1MufSVzw-45" : {
+          "x" : 28,
+          "y" : 8
+        },
+        "-KXbJbA5LgIl33kt7lrL" : {
+          "x" : 27,
+          "y" : 8
+        },
+        "-KXbJbKCE7CCNMpunfcg" : {
+          "x" : 26,
+          "y" : 8
+        },
+        "-KXbJbUYDXRGTxAwgIF-" : {
+          "x" : 24,
+          "y" : 8
+        },
+        "-KXbJbevqyQq0VFHyzeB" : {
+          "x" : 25,
+          "y" : 8
+        },
+        "-KXbJbvBK8_Cl-TosryA" : {
+          "x" : 23,
+          "y" : 8
+        },
+        "-KXbJc4akL_FSSZOvyPj" : {
+          "x" : 22,
+          "y" : 8
+        },
+        "-KXbJcKE7x8YF-OvyuZv" : {
+          "x" : 21,
+          "y" : 8
+        },
+        "-KXbJcTK6904hp5XG9vf" : {
+          "x" : 20,
+          "y" : 8
+        },
+        "-KXbJcbIO4tVnTJurKZk" : {
+          "x" : 19,
+          "y" : 8
+        },
+        "-KXbJctuy1N6b8YRkkxp" : {
+          "x" : 18,
+          "y" : 8
+        },
+        "-KXbJd7yIds86AG5sgPo" : {
+          "x" : 17,
+          "y" : 9
+        },
+        "-KXbJdc75k7rqd__DX1R" : {
+          "x" : 17,
+          "y" : 10
+        },
+        "-KXbJe-yULVJMc6Pywqs" : {
+          "x" : 17,
+          "y" : 11
+        },
+        "-KXbJeHm408FtKopuk8_" : {
+          "x" : 16,
+          "y" : 11
+        },
+        "-KXbJeoMv_JO6aBO0xE5" : {
+          "x" : 15,
+          "y" : 12
+        },
+        "-KXbJfPJ73fhCtFUAAHm" : {
+          "x" : 16,
+          "y" : 12
+        },
+        "-KXbJgUWJd-qWWqu6uzc" : {
           "x" : 14,
           "y" : 12
         },
-        "-KWszfjxhvgWI1NEyY2U" : {
-          "x" : 16,
-          "y" : 11
-        },
-        "-KWszfpjRmfPIThSet_8" : {
-          "x" : 15,
-          "y" : 12
-        },
-        "-KWszghrOXMD3gt6hLlr" : {
-          "x" : 17,
-          "y" : 10
-        },
-        "-KWszh0OOls5mDDkKbaz" : {
-          "x" : 17,
-          "y" : 9
-        },
-        "-KWszhBF7dex_TXcbtYE" : {
-          "x" : 18,
-          "y" : 8
-        },
-        "-KWsziOLKcafgQy6YwFZ" : {
-          "x" : 19,
-          "y" : 8
-        },
-        "-KWsziXq-8arlbHFfJHU" : {
-          "x" : 20,
-          "y" : 8
-        },
-        "-KWszidibWcleS6zp4uE" : {
-          "x" : 21,
-          "y" : 8
-        },
-        "-KWsziiygi5RESsEMRIo" : {
-          "x" : 22,
-          "y" : 8
-        },
-        "-KWsziotnrRrZPGBscbz" : {
-          "x" : 23,
-          "y" : 8
-        },
-        "-KWszixSLWhI46HT98mn" : {
-          "x" : 24,
-          "y" : 8
-        },
-        "-KWszj8EoMFksWUVG93V" : {
-          "x" : 25,
-          "y" : 8
-        },
-        "-KWszjDTCSlCwS_M19FC" : {
-          "x" : 26,
-          "y" : 8
-        },
-        "-KWszjJ87OijKaAWqU4I" : {
-          "x" : 27,
-          "y" : 8
-        },
-        "-KWszjm4Vnvud0vQ6Sw6" : {
-          "x" : 28,
-          "y" : 8
-        },
-        "-KWszk0BiCOpXd19yF5T" : {
-          "x" : 30,
-          "y" : 8
-        },
-        "-KWszkIb2DSRncS-S9qe" : {
-          "x" : 29,
-          "y" : 8
-        },
-        "-KWszkRWgp4nlP5XLZmc" : {
-          "x" : 31,
-          "y" : 8
-        },
-        "-KWszkcu65P2NIpuzqde" : {
-          "x" : 32,
-          "y" : 8
-        },
-        "-KWszkhONK7w9BTdUWI8" : {
-          "x" : 33,
-          "y" : 8
-        },
-        "-KWszkocoWNMoE4ytqbo" : {
-          "x" : 34,
-          "y" : 8
-        },
-        "-KWszkuip2XWGaVu7RFX" : {
-          "x" : 36,
-          "y" : 8
-        },
-        "-KWszl7Ivvd8kSBupkPW" : {
-          "x" : 35,
-          "y" : 8
-        },
-        "-KWszlE6-004eqyg7VIy" : {
-          "x" : 37,
-          "y" : 8
-        },
-        "-KWszlRQwN8y5nQqZS7x" : {
-          "x" : 38,
-          "y" : 8
-        },
-        "-KWszlYYd8BKJRcsxhJL" : {
-          "x" : 39,
-          "y" : 8
-        },
-        "-KWszlhl-e6PVmhksVW3" : {
-          "x" : 40,
-          "y" : 8
-        },
-        "-KWszlwqnKZ2mAwktjYy" : {
-          "x" : 41,
-          "y" : 8
-        },
-        "-KWszmBdkgtb0ayN1CPX" : {
-          "x" : 42,
-          "y" : 9
-        },
-        "-KWszmLZsgkFXU8uL10h" : {
-          "x" : 42,
-          "y" : 10
-        },
-        "-KWszmRKvkfIbCcVHDrc" : {
-          "x" : 42,
-          "y" : 11
-        },
-        "-KWszmXLn-FEp4s6CJ3u" : {
-          "x" : 42,
-          "y" : 12
-        },
-        "-KWszmhHAcltHjyZtJLX" : {
-          "x" : 41,
+        "-KXbJgevgfbpi_nS7voh" : {
+          "x" : 13,
           "y" : 13
         },
-        "-KWszmoOkWrQuVcBfo96" : {
-          "x" : 40,
-          "y" : 13
-        },
-        "-KWszmvFXNL4HWzvyX10" : {
-          "x" : 39,
-          "y" : 13
-        },
-        "-KWsznCfXP9f8vCkntLV" : {
-          "x" : 38,
-          "y" : 13
-        },
-        "-KWsznNEfHsSkJ9ovsb6" : {
-          "x" : 37,
-          "y" : 13
-        },
-        "-KWsznUBDG5UMVviG1H6" : {
-          "x" : 36,
-          "y" : 13
-        },
-        "-KWsznbFtdWEyLcgNsBL" : {
-          "x" : 35,
-          "y" : 13
-        },
-        "-KWsznmk-BExhRTKzTOy" : {
-          "x" : 34,
-          "y" : 13
-        },
-        "-KWsznt_yJynzi88Gv5D" : {
-          "x" : 33,
-          "y" : 13
-        },
-        "-KWszo36cTfcnivrRR8m" : {
-          "x" : 32,
-          "y" : 13
-        },
-        "-KWszoBw_LoU15-SCDWU" : {
-          "x" : 31,
-          "y" : 13
-        },
-        "-KWszoJhpkJmBTe8zDyF" : {
-          "x" : 30,
-          "y" : 13
-        },
-        "-KWszoRiBL5jhDJG_r-R" : {
-          "x" : 29,
-          "y" : 13
-        },
-        "-KWszoeNsi0MNML1MfZH" : {
-          "x" : 28,
-          "y" : 13
-        },
-        "-KWszoj0-sQW8Jh9XHn-" : {
-          "x" : 26,
-          "y" : 13
-        },
-        "-KWszopeU0ZfLtkKhBiy" : {
-          "x" : 27,
-          "y" : 13
-        },
-        "-KWszow5gQJXJI6hvrdq" : {
-          "x" : 24,
-          "y" : 13
-        },
-        "-KWszp1xX8kP1uXPDCnC" : {
-          "x" : 25,
-          "y" : 13
-        },
-        "-KWszpPWWwL3Slyscrq3" : {
-          "x" : 22,
-          "y" : 13
-        },
-        "-KWszpX30g_AhARtX4jH" : {
-          "x" : 21,
-          "y" : 13
-        },
-        "-KWszpdwiLUgxg10JB8h" : {
-          "x" : 23,
-          "y" : 13
-        },
-        "-KWt-F4HL1zFgpLL0Iwo" : {
-          "x" : 20,
+        "-KXbJgzxXlCZTrpEKEQW" : {
+          "x" : 13,
           "y" : 14
         },
-        "-KWt-FB5v8CpRuswFMHC" : {
-          "x" : 20,
-          "y" : 13
+        "-KXbJhGdijwspwtzGTGJ" : {
+          "x" : 13,
+          "y" : 16
+        },
+        "-KXbJhdDn1A2SXgo5Krr" : {
+          "x" : 13,
+          "y" : 17
+        },
+        "-KXbJhs2VewbbpQUvYCM" : {
+          "x" : 13,
+          "y" : 15
+        },
+        "-KXbJi65CgA_k7_6BHY7" : {
+          "x" : 13,
+          "y" : 18
+        },
+        "-KXbJiFtghNdSligaSMP" : {
+          "x" : 13,
+          "y" : 19
+        },
+        "-KXbJiYOMWrUSWznmWoy" : {
+          "x" : 13,
+          "y" : 21
+        },
+        "-KXbJimDaf1_2MU1qW9J" : {
+          "x" : 13,
+          "y" : 20
+        },
+        "-KXbJj0rHbK5d_8AIrF_" : {
+          "x" : 13,
+          "y" : 22
         }
       },
       "width" : "45"
@@ -901,10 +906,6 @@
           "x" : 35,
           "y" : 13
         },
-        "-KWt4E2pxBdfKru2t4ee" : {
-          "x" : 33,
-          "y" : 13
-        },
         "-KWt4E72vH2RgA6ZaNR9" : {
           "x" : 34,
           "y" : 13
@@ -1202,6 +1203,7 @@
         "-KWt5uIrVh8OO3NTF9St" : {
           "description" : "Inspect the inn to talk to people inside.",
           "eventName" : "inspect_inn",
+          "interactionMode" : "use",
           "position" : {
             "x" : 16,
             "y" : 20
@@ -1210,6 +1212,7 @@
         "-KWt5zP9mLql6zC58HWa" : {
           "description" : "Inspect the house and talk to the folks inside.",
           "eventName" : "inspect_house",
+          "interactionMode" : "use",
           "position" : {
             "x" : 25,
             "y" : 20
@@ -1218,6 +1221,7 @@
         "-KWt632nJNoXVNa-lslt" : {
           "description" : "Recruit Maelle at the clinic.",
           "eventName" : "inspect_clinic",
+          "interactionMode" : "use",
           "position" : {
             "x" : 36,
             "y" : 20
